...
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/task_image"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_body" />

    <TextView
        android:id="@+id/fileLinkDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_the_linked_file"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:textColor="#FF03DAC5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleTaskTeam" />
    <TextView
        android:id="@+id/singleTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/task_detail_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
